Avoid inefficient constructors
Original author: jluehe
Date: 2006-10-03 20:19:13+00:00

svn path=/trunk/; revision=582